# officetim

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  db.sqlite3  docker-compose.yml  index.html  manage.py  netlify.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  start.sh  vite.config.js  vue.config.js  wait-for-db.sh
blog_project/: .env.production  settings.py  urls.py  wsgi.py
posts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
posts/fixtures/: seed.json
posts/migrations/: 0001_initial.py  0002_post_image.py  0003_contact.py  0004_tag_post_tags.py
src/: main.js
src/api/: contact.js  index.js  posts.js
src/assets/: main.css
src/router/: index.js
src/styles/: variables.scss
src/utils/: index.js
src/views/: AboutView.vue  BlogDetailView.vue  BlogView.vue  ContactView.vue  DetailedView.vue  HomeView.vue  ThankYouView.vue
src/views/@/: api.post.js
src/views/Layout/: IndexLayout.vue
