[tool.poetry]
name = "blog_project"
version = "0.1.0"
description = ""
authors = ["Tim Vogt <tvogt@intothesource.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.2"
django-cors-headers = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
